--- a/prova.html
+++ b/prova.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avaliação Contínua 1 - Inglês</title>
     <link rel="stylesheet" href="prova.css">
-    
 </head>
 <body>
     <header>
-        <h1>AVALIAÇÃO CONTINUA 1 - 7º - AVANÇADO</h1>
-        <h3>INGLÊS - 2ª ETAPA - DATA: 04/06/2025</h3>
-        <hr> </header>
-
-    <main>
-        </main>
+        <div class="titulo">
+            <h1>AVALIAÇÃO CONTINUA 1 - 7º - AVANÇADO</h1>
+            <h3>INGLÊS - 2ª ETAPA - DATA: 04/06/2025</h3>
+        </div>
+        <hr class="first">
+        <div class="header-container">
+            <div class="grade-box">
+                <p>NOTA</p>
+            </div>
+        
+    </header>
 
     <footer>
         </footer>
