--- a/prova.html
+++ b/prova.html
@@ -13,6 +13,10 @@
             <h3>INGLÊS - 2ª ETAPA - DATA: 04/06/2025</h3>
         </div>
         <hr class="first">
+        <div class="aluno">
+            <p>ALUNO</p>
+            <hr class="second">
+        </div>
         <div class="header-container">
             <div class="grade-box">
                 <p>NOTA</p>
