--- a/prova.html
+++ b/prova.html
@@ -17,6 +17,10 @@
             <p>ALUNO</p>
             <hr class="second">
         </div>
+        <div class="turma">
+            <p>turma</p>
+            <hr class="third">
+        </div>
         <div class="header-container">
             <div class="grade-box">
                 <p>NOTA</p>
