--- a/prova.html
+++ b/prova.html
@@ -18,14 +18,17 @@
             <hr class="second">
         </div>
         <div class="turma">
-            <p>turma</p>
+            <p>N°</p>
             <hr class="third">
         </div>
         <div class="header-container">
             <div class="grade-box">
                 <p>NOTA</p>
             </div>
-        
+        <div class="sede">
+            <p>SEDE</p>
+            <hr class="fourth">
+        </div>    
     </header>
 
     <footer>
