--- a/prova.html
+++ b/prova.html
@@ -17,6 +17,18 @@
             <p>ALUNO</p>
             <hr class="second">
         </div>
+        <div class="sede">
+            <p>SEDE</p>
+            <hr class="quarto">
+        </div>
+        <div class="tur">
+            <p>TURMA</p>
+            <hr class="quinto">
+        </div>
+        <div class="scores">
+            <p>TOTAL SCORES</p>
+            <hr class="sexto">
+        </div>
         <div class="turma">
             <p>N°</p>
             <hr class="third">
@@ -25,13 +37,144 @@
             <div class="grade-box">
                 <p>NOTA</p>
             </div>
-        <div class="sede">
-            <p>SEDE</p>
-            <hr class="fourth">
-        </div>    
+        </div>
+        
+        <div class="instruction">
+            <p><strong>READ THE TEXT TO ANSWER THE QUESTIONS FROM 1 TO 5</strong></p>
+        </div>
+        <div class="text">
+            <h1><strong>What happen to your body when you have a cold?</strong></h1>
+            <p>When you have a cold, your body is fighting a viral infection, 
+                usually caused by a rhinovirus. This is a very common illness,
+                and the symptoms can be a real nuisance. You might feel a sore
+                throat, have a runny or stuffy nose, and sneeze a lot. A cough
+                and a feeling of general tiredness are also very common.
+            Your immune system is working hard to fight off the virus. 
+            While there's no cure, you can relieve the symptoms with rest,
+            plenty of fluids, and over-the-counter medicines. A cold usually
+            lasts for about 7 to 10 days, and then you start to feel better as 
+            your body wins the battle against the virus.</p>
+        </div>
+        
+        <div class="test-paper">
+            <div class="question">
+                <p>1. Why does your nose run when you have a cold?</p>
+            </div>
+            <div class="options">
+                <div class="option">
+                    (A) To get rid of extra mucus, viruses, and white blood cells.
+                </div>
+                <div class="option">
+                    (B) To stop the blood vessels from swelling.
+                </div>
+                <div class="option">
+                    (C) To increase the number of viruses in your body.
+                </div>
+                <div class="option">
+                    (D) To make the cold worse.
+                </div>
+                <div class="option">
+                    (E) To cool down your body temperature.
+                </div>
+            </div>
+        </div>
+
+        <div class="test-paper">
+            <div class="question">
+                <p>2. What is the typical duration of a common cold, according to the text?</p>
+            </div>
+            <div class="options">
+                <div class="option">
+                    (A) Less than 3 days.
+                </div>
+                <div class="option">
+                    (B) About a month.
+                </div>
+                <div class="option">
+                    (C) About 7 to 10 days.
+                </div>
+                <div class="option">
+                    (D) Two weeks or more.
+                </div>
+                <div class="option">
+                    (E) The text does not mention the duration.
+                </div>
+            </div>
+        </div>
+
+        <div class="test-paper">
+            <div class="question">
+                <p>3. What is the main cause of the common cold, as mentioned in the text?</p>
+            </div>
+            <div class="options">
+                <div class="option">
+                    (A) A bacterial infection.
+                </div>
+                <div class="option">
+                    (B) The change of seasons.
+                </div>
+                <div class="option">
+                    (C) A rhinovirus.
+                </div>
+                <div class="option">
+                    (D) Cold weather.
+                </div>
+                <div class="option">
+                    (E) Lack of rest.
+                </div>
+            </div>
+        </div>
+
+        <div class="test-paper">
+            <div class="question">
+                <p>4. Which of the following is NOT listed as a common symptom of a cold?</p>
+            </div>
+            <div class="options">
+                <div class="option">
+                    (A) Sore throat.
+                </div>
+                <div class="option">
+                    (B) Stuffy nose.
+                </div>
+                <div class="option">
+                    (C) High fever.
+                </div>
+                <div class="option">
+                    (D) Cough.
+                </div>
+                <div class="option">
+                    (E) Sneezing.
+                </div>
+            </div>
+        </div>
+
+        <div class="test-paper">
+            <div class="question">
+                <p>5. What is the best way to relieve the symptoms of a cold, according to the text?</p>
+            </div>
+            <div class="options">
+                <div class="option">
+                    (A) Taking antibiotics and running a lot.
+                </div>
+                <div class="option">
+                    (B) Drinking soda and eating fast food.
+                </div>
+                <div class="option">
+                    (C) Resting, drinking fluids, and taking over-the-counter medicines.
+                </div>
+                <div class="option">
+                    (D) Doing intense physical exercise.
+                </div>
+                <div class="option">
+                    (E) Waiting for a cure to be invented.
+                </div>
+            </div>
+        </div>
+
     </header>
 
     <footer>
-        </footer>
+    </footer>
+    <script src="prova.js"></script>
 </body>
 </html>
