--- a/prova.html
+++ b/prova.html
@@ -26,7 +26,7 @@
             <hr class="quinto">
         </div>
         <div class="scores">
-            <p>TOTAL SCORES</p>
+            <p class="score-display">TOTAL SCORES</p>
             <hr class="sexto">
         </div>
         <div class="turma">
@@ -35,7 +35,7 @@
         </div>
         <div class="header-container">
             <div class="grade-box">
-                <p>NOTA</p>
+                <p class="grade-display">NOTA</p>
             </div>
         </div>
         
@@ -61,19 +61,19 @@
                 <p>1. Why does your nose run when you have a cold?</p>
             </div>
             <div class="options">
-                <div class="option">
+                <div class="option" data-answer="A">
                     (A) To get rid of extra mucus, viruses, and white blood cells.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="B">
                     (B) To stop the blood vessels from swelling.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="C">
                     (C) To increase the number of viruses in your body.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="D">
                     (D) To make the cold worse.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="E">
                     (E) To cool down your body temperature.
                 </div>
             </div>
@@ -84,19 +84,19 @@
                 <p>2. What is the typical duration of a common cold, according to the text?</p>
             </div>
             <div class="options">
-                <div class="option">
+                <div class="option" data-answer="A">
                     (A) Less than 3 days.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="B">
                     (B) About a month.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="C">
                     (C) About 7 to 10 days.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="D">
                     (D) Two weeks or more.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="E">
                     (E) The text does not mention the duration.
                 </div>
             </div>
@@ -107,19 +107,19 @@
                 <p>3. What is the main cause of the common cold, as mentioned in the text?</p>
             </div>
             <div class="options">
-                <div class="option">
+                <div class="option" data-answer="A">
                     (A) A bacterial infection.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="B">
                     (B) The change of seasons.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="C">
                     (C) A rhinovirus.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="D">
                     (D) Cold weather.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="E">
                     (E) Lack of rest.
                 </div>
             </div>
@@ -130,19 +130,19 @@
                 <p>4. Which of the following is NOT listed as a common symptom of a cold?</p>
             </div>
             <div class="options">
-                <div class="option">
+                <div class="option" data-answer="A">
                     (A) Sore throat.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="B">
                     (B) Stuffy nose.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="C">
                     (C) High fever.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="D">
                     (D) Cough.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="E">
                     (E) Sneezing.
                 </div>
             </div>
@@ -153,22 +153,26 @@
                 <p>5. What is the best way to relieve the symptoms of a cold, according to the text?</p>
             </div>
             <div class="options">
-                <div class="option">
+                <div class="option" data-answer="A">
                     (A) Taking antibiotics and running a lot.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="B">
                     (B) Drinking soda and eating fast food.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="C">
                     (C) Resting, drinking fluids, and taking over-the-counter medicines.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="D">
                     (D) Doing intense physical exercise.
                 </div>
-                <div class="option">
+                <div class="option" data-answer="E">
                     (E) Waiting for a cure to be invented.
                 </div>
             </div>
+        </div>
+        
+        <div class="submit-container">
+            <button id="submit-btn">ENVIAR RESPOSTAS</button>
         </div>
 
     </header>
