--- a/prova.html
+++ b/prova.html
@@ -36,6 +36,7 @@
         <div class="header-container">
             <div class="grade-box">
                 <p class="grade-display">NOTA</p>
+                <p class="resultado">Resultado</p>
             </div>
             <div class="instruction">
                 <p><strong>READ THE TEXT TO ANSWER THE QUESTIONS FROM 1 TO 5</strong></p>
