--- a/prova.html
+++ b/prova.html
@@ -42,74 +42,90 @@
                 <p><strong>READ THE TEXT TO ANSWER THE QUESTIONS FROM 1 TO 5</strong></p>
             </div>
             <div class="text">
-                <h1><strong>What happen to your body when you have a cold?</strong></h1>
-                <p>When you have a cold, your body is fighting a viral infection,
-                    usually caused by a rhinovirus. This is a very common illness,
-                    and the symptoms can be a real nuisance. You might feel a sore
-                    throat, have a runny or stuffy nose, and sneeze a lot. A cough
-                    and a feeling of general tiredness are also very common.
-                    Your immune system is working hard to fight off the virus.
-                    While there's no cure, you can relieve the symptoms with rest,
-                    plenty of fluids, and over-the-counter medicines. A cold usually
-                    lasts for about 7 to 10 days, and then you start to feel better as
-                    your body wins the battle against the virus.</p>
+                <h1><strong>The Power of Colors in Our Lives</strong></h1>
+                <p>Colors are more than just visual elements—they carry 
+                   emotional, psychological, and cultural meanings 
+                   that influence how we feel, think, and behave. Warm 
+                   colors like red, orange, and yellow are often associated 
+                   with energy, passion, and enthusiasm. These colors can 
+                   stimulate the senses and are commonly used to grab 
+                   attention or evoke excitement. On the other hand, 
+                   cool colors such as blue, green, and purple tend 
+                   to create a sense of calm, peace, and stability. 
+                   They are often used in environments where relaxation 
+                   and concentration are desired, like hospitals,
+                   classrooms, or meditation spaces. Color psychology
+                    plays a crucial role in marketing and design. Brands
+                    use specific colors to communicate their identity 
+                    and values. For example, red can suggest urgency 
+                    or power, while blue conveys trust and professionalism.
+                    Designers carefully choose color palettes to influence 
+                    consumer behavior and emotional response. Understanding
+                    how colors affect us helps in creating spaces that 
+                    promote well-being, productivity, and emotional balance. Whether in fashion, architecture, advertising, or education, the strategic use of color can enhance communication and connection.</p>
             </div>
-        </div> <div class="test-paper">
+        </div>
+        <div class="test-paper">
             <div class="question">
-                <p>1. Why does your nose run when you have a cold?</p>
+                <p>1. According to the text, what is the primary role of colors in our lives?</p>
             </div>
             <div class="options">
-                <div class="option" data-answer="A">(A) To get rid of extra mucus, viruses, and white blood cells.</div>
-                <div class="option" data-answer="B">(B) To stop the blood vessels from swelling.</div>
-                <div class="option" data-answer="C">(C) To increase the number of viruses in your body.</div>
-                <div class="option" data-answer="D">(D) To make the cold worse.</div>
-                <div class="option" data-answer="E">(E) To cool down your body temperature.</div>
+                <div class="option" data-answer="A">(A) They influence how we feel, think, and behave.</div>
+                <div class="option" data-answer="B">(B) They are only visual elements without deeper meaning.</div>
+                <div class="option" data-answer="C">(C) They are exclusively used in fashion and advertising.</div>
+                <div class="option" data-answer="D">(D) Their main purpose is to show a person's financial status.</div>
+                <div class="option" data-answer="E">(E) They only serve to make environments more beautiful.</div>
             </div>
-        </div> <div class="test-paper">
+        </div>
+        <div class="test-paper">
             <div class="question">
-                <p>2. What is the typical duration of a common cold, according to the text?</p>
+                <p>2. Which colors are mentioned as being suitable for environments where relaxation and concentration are desired?</p>
             </div>
             <div class="options">
-                <div class="option" data-answer="A">(A) Less than 3 days.</div>
-                <div class="option" data-answer="B">(B) About a month.</div>
-                <div class="option" data-answer="C">(C) About 7 to 10 days.</div>
-                <div class="option" data-answer="D">(D) Two weeks or more.</div>
-                <div class="option" data-answer="E">(E) The text does not mention the duration.</div>
+                <div class="option" data-answer="A">(A) Red, orange, and yellow.</div>
+                <div class="option" data-answer="B">(B) Black, white, and gray.</div>
+                <div class="option" data-answer="C">(C) Blue, green, and purple.</div>
+                <div class="option" data-answer="D">(D) Only red and blue.</div>
+                <div class="option" data-answer="E">(E) Bright and neon colors.</div>
             </div>
-        </div> <div class="test-paper">
+        </div>
+        <div class="test-paper">
             <div class="question">
-                <p>3. What is the main cause of the common cold, as mentioned in the text?</p>
+                <p>3. In the context of marketing and design, what does the color red often suggest?</p>
             </div>
             <div class="options">
-                <div class="option" data-answer="A">(A) A bacterial infection.</div>
-                <div class="option" data-answer="B">(B) The change of seasons.</div>
-                <div class="option" data-answer="C">(C) A rhinovirus.</div>
-                <div class="option" data-answer="D">(D) Cold weather.</div>
-                <div class="option" data-answer="E">(E) Lack of rest.</div>
+                <div class="option" data-answer="A">(A) Calm and peace.</div>
+                <div class="option" data-answer="B">(B) Trust and professionalism.</div>
+                <div class="option" data-answer="C">(C) Urgency or power.</div>
+                <div class="option" data-answer="D">(D) Stability and concentration.</div>
+                <div class="option" data-answer="E">(E) Sadness and nostalgia.</div>
             </div>
-        </div> <div class="test-paper">
+        </div>
+        <div class="test-paper">
             <div class="question">
-                <p>4. Which of the following is NOT listed as a common symptom of a cold?</p>
+                <p>4. What feelings are warm colors such as red, orange, and yellow often associated with?</p>
             </div>
             <div class="options">
-                <div class="option" data-answer="A">(A) Sore throat.</div>
-                <div class="option" data-answer="B">(B) Stuffy nose.</div>
-                <div class="option" data-answer="C">(C) High fever.</div>
-                <div class="option" data-answer="D">(D) Cough.</div>
-                <div class="option" data-answer="E">(E) Sneezing.</div>
+                <div class="option" data-answer="A">(A) Peace and stability.</div>
+                <div class="option" data-answer="B">(B) Calm and concentration.</div>
+                <div class="option" data-answer="C">(C) Energy, passion, and enthusiasm.</div>
+                <div class="option" data-answer="D">(D) Trust and professionalism.</div>
+                <div class="option" data-answer="E">(E) Sadness and melancholy.</div>
             </div>
-        </div> <div class="test-paper">
+        </div>
+        <div class="test-paper">
             <div class="question">
-                <p>5. What is the best way to relieve the symptoms of a cold, according to the text?</p>
+                <p>5. What is the main goal of using color strategically in areas like architecture or education, according to the text?</p>
             </div>
             <div class="options">
-                <div class="option" data-answer="A">(A) Taking antibiotics and running a lot.</div>
-                <div class="option" data-answer="B">(B) Drinking soda and eating fast food.</div>
-                <div class="option" data-answer="C">(C) Resting, drinking fluids, and taking over-the-counter medicines.</div>
-                <div class="option" data-answer="D">(D) Doing intense physical exercise.</div>
-                <div class="option" data-answer="E">(E) Waiting for a cure to be invented.</div>
+                <div class="option" data-answer="A">(A) To simply make things look pretty.</div>
+                <div class="option" data-answer="B">(B) To follow the latest fashion trends.</div>
+                <div class="option" data-answer="C">(C) To enhance communication and promote well-being.</div>
+                <div class="option" data-answer="D">(D) To confuse people's senses.</div>
+                <div class="option" data-answer="E">(E) To make spaces feel smaller.</div>
             </div>
-        </div> <div class="submit-container">
+        </div>
+        <div class="submit-container">
             <button id="submit-btn">ENVIAR RESPOSTAS</button>
         </div>
     </header>
