--- a/prova.html
+++ b/prova.html
@@ -40,6 +40,7 @@
             </div>
             <div class="instruction">
                 <p><strong>READ THE TEXT TO ANSWER THE QUESTIONS FROM 1 TO 5</strong></p>
+                 <img src="http://googleusercontent.com/image_generation_content/0" alt="Representação abstrata do poder das cores" style="width: 100%; max-width: 500px; display: block; margin: 20px auto; border-radius: 8px;">
             </div>
             <div class="text">
                 <h1><strong>The Power of Colors in Our Lives</strong></h1>
