--- a/provagrama.html
+++ b/provagrama.html
@@ -75,11 +75,21 @@
                 <p>3. Read. Circle the verb tense that best completes each sentence.</p>
             </div>
             <div class="options">
-                  <div class="option" data-answer="A">(A)  I  <strong>saw</strong>  / <strong>have seen</strong> that fantastic movie yesterday.</div>
-                  <div class="option" data-answer="B">(B) My sister <strong>has worked</strong> / <strong>worked</strong> at that company since 2022.</div>
-                 <div class="option" data-answer="C">(C) He can't play now. He <strong>didn't do</strong> / <strong>hasn't done</strong> his homework yet.</div>
-                 <div class="option" data-answer="D">(D) They <strong>have traveled</strong> / <strong>traveled</strong> to Japan two years ago.</div>
-                <div class="option" data-answer="E">(E) She <strong>lived</strong> / <strong>has lived</strong> in London for five years, but now she lives in Paris.</div>
+                <div class="option">
+                    (A) I <span class="verb-option">saw</span> / <span class="verb-option">have seen</span> that fantastic movie yesterday.
+                </div>
+                <div class="option">
+                    (B) My sister <span class="verb-option">has worked</span> / <span class="verb-option">worked</span> at that company since 2022.
+                </div>
+                <div class="option">
+                    (C) He can't play now. He <span class="verb-option">didn't do</span> / <span class="verb-option">hasn't done</span> his homework yet.
+                </div>
+                <div class="option">
+                    (D) They <span class="verb-option">have traveled</span> / <span class="verb-option">traveled</span> to Japan two years ago.
+                </div>
+                <div class="option">
+                    (E) She <span class="verb-option">lived</span> / <span class="verb-option">has lived</span> in London for five years, but now she lives in Paris.
+                </div>                
             </div>
         </div>
         <div class="test-paper">
