--- a/provagrama.html
+++ b/provagrama.html
@@ -53,7 +53,7 @@
             <div class="options">
                 <div class="option" data-answer="A">(A) Only I and II are correct.</div>
                 <div class="option" data-answer="B">(B) Only II, III and IV are correct.</div>
-                <div class="option" data-answer="C">(C) Only I and IV are correct.</div>
+                <div class="option" data-answer="C">(C) Only I and III and IV are correct.</div>
                 <div class="option" data-answer="D">(D) Only I, IV and V are correct .</div>
                 <div class="option" data-answer="E">(E) All of the sentenses are correct.</div>
             </div>
@@ -76,7 +76,7 @@
             </div>
             <div class="options">
                 <div class="option">
-                    (A) I <span class="verb-option">saw</span> / <span class="verb-option">have seen</span> that fantastic movie yesterday.
+                    (A) I <span class="verb-option">have seen</span> / <span class="verb-option">saw</span> that fantastic movie.
                 </div>
                 <div class="option">
                     (B) My sister <span class="verb-option">has worked</span> / <span class="verb-option">worked</span> at that company since 2022.
@@ -104,10 +104,10 @@
                 <p>V.   We have to use the verb in the participle</p>
             </div>
             <div class="options">
-                <div class="option" data-answer="A">(A) Only I and II are correct.</div>
-                <div class="option" data-answer="B">(B) Only II, III and IV are correct.</div>
-                <div class="option" data-answer="C">(C) Only I and IV are correct.</div>
-                <div class="option" data-answer="D">(D) Only I, IV and V are correct .</div>
+                <div class="option" data-answer="A">(A) I and II are correct.</div>
+                <div class="option" data-answer="B">(B) II, III and IV are correct.</div>
+                <div class="option" data-answer="C">(C)  I, III and IV are correct.</div>
+                <div class="option" data-answer="D">(D)  I, IV and V are correct .</div>
                 <div class="option" data-answer="E">(E) All of the sentenses are correct.</div>
             </div>
         </div>
