--- a/provagrama.html
+++ b/provagrama.html
@@ -62,7 +62,7 @@
               <div class="question">
                   <p>2. Which sentence uses the present perfect correctly?</p>
 
-                 <button class="help-btn-question">Ajuda</button>
+                 <button class="help-btn-question" data-video-url="https://www.youtube.com/embed/ENZ0-KRAcp0">?</button>
 
         </div>
            <div class="options">
@@ -132,7 +132,9 @@
     <div class="test-paper">
           <div class="question">
             <img src="imagens/tirinha2.png" alt="">
-            <p>6. In the first panel of the comic strip, the character states: "I've decided to become more aggressive...". The highlighted verb form (Present Perfect) indicates an action that:</p>
+            <p>6. In the first panel of the comic strip, the character states: "I've decided to become
+                 more aggressive...". The highlighted verb form (Present Perfect) indicates an action that:</p>
+                 <button class="help-btn-question" data-video-url="https://www.youtube.com/embed/mW4INGFLBhA">?</button>
          </div>
        <div class="options">
           <div class="option" data-answer="A">(A) occurs a single time in the present.</div>
@@ -158,6 +160,8 @@
         <div class="test-paper">
             <div class="question">
                 <p>8.The word "for" is used to talk about</p>
+                <button class="help-btn-question" data-video-url="https://www.youtube.com/embed/MgYPm9kjQSw">?</button>
+
             </div>
             <div class="options">
                 <div class="option" data-answer="A">(A) a specific moment in the past (e.g., 8 p.m., last Tuesday).</div>
