--- a/indefpronoums.html
+++ b/indefpronoums.html
@@ -41,61 +41,37 @@
         </div>
         <div class="test-paper">
             <div class="question">
-                <p>1. Read the sentences using the present perfect choose options that shows ony correct sentences </p>
+                <p>1. Read the sentences and choose the option that shows only correct use of indefinite pronouns.</p>
             </div>
             <div class="opt">
-                <p>I.   I have lived here for five years</p>
-                <p>II.  She has traveled to many countries last year.</p>
-                <p>III. They have just finished their homework.</p>
-                <p>IV.  We have not seen that movie yet.</p>
-                <p>V.   He has gone to the movies yesterday</p>
+               <p>I.   Somebody is waiting for you outside.</p>
+               <p>II.  Nobody didn’t call me yesterday.</p>
+               <p>III. They didn’t see anybody in the park.</p>
+               <p>IV.  We met everybody at the party.</p>
+               <p>V.   Anybody can speaks English very well here.</p>
+            </div>
+               <div class="options">
+               <div class="option" data-answer="A">(A) Only I and II are correct.</div>
+               <div class="option" data-answer="B">(B) Only II, III and IV are correct.</div>
+               <div class="option" data-answer="C">(C) Only I, III and IV are correct.</div>
+               <div class="option" data-answer="D">(D) Only I, III and IV are correct.</div>
+               <div class="option" data-answer="E">(E) All of the sentences are correct.</div>
+            </div>
+        </div>
+        <div class="test-paper"> 
+            <div class="question">
+                <p>2. Which sentence uses an indefinite pronoun correctly?</p>
+                <button class="help-btn-question" data-video-url="https://www.youtube.com/embed/ENZ0-KRAcp0">?</button>
             </div>
             <div class="options">
-                <div class="option" data-answer="A">(A) Only I and II are correct.</div>
-                <div class="option" data-answer="B">(B) Only II, III and IV are correct.</div>
-                <div class="option" data-answer="C">(C) Only I and III and IV are correct.</div>
-                <div class="option" data-answer="D">(D) Only I, IV and V are correct .</div>
-                <div class="option" data-answer="E">(E) All of the sentenses are correct.</div>
+               <div class="option" data-answer="A">(A) Nobody don’t knows the answer.</div>
+               <div class="option" data-answer="B">(B) She saw any at the supermarket yesterday.</div>
+               <div class="option" data-answer="C">(C) We have met somebody very interesting today.</div>
+               <div class="option" data-answer="D">(D) They invited everybody last week, but anybody came.</div>
+               <div class="option" data-answer="E">(E) He has spoke with nobody about the problem.</div>
             </div>
-        </div>
-        <div class="test-paper">
-              <div class="question">
-                  <p>2. Which sentence uses the present perfect correctly?</p>
-
-                 <button class="help-btn-question" data-video-url="https://www.youtube.com/embed/ENZ0-KRAcp0">?</button>
-
-        </div>
-           <div class="options">
-              <div class="option" data-answer="A">(A) I have went to the gymn yesterday.</div>
-              <div class="option" data-answer="B">(B) She has already ate her dinner.</div>
-              <div class="option" data-answer="C">(C) We have lived in this city since 2010.</div>
-              <div class="option" data-answer="D">(D)  They have bought only red and blue last week.</div>
-            <div class="option" data-answer="E">(E) He have painted the bright and neon colors.</div>
-        </div>
         </div>
         
-        <div class="test-paper">
-            <div class="question">
-                <p>3. Read. Circle the verb tense that best completes each sentence.</p>
-            </div>
-            <div class="options">
-                <div class="option">
-                    (A) I <span class="verb-option">have seen</span> / <span class="verb-option">saw</span> that fantastic movie.
-                </div>
-                <div class="option">
-                    (B) My sister <span class="verb-option">has worked</span> / <span class="verb-option">worked</span> at that company since 2022.
-                </div>
-                <div class="option">
-                    (C) He can't play now. He <span class="verb-option">didn't do</span> / <span class="verb-option">hasn't done</span> his homework yet.
-                </div>
-                <div class="option">
-                    (D) They <span class="verb-option">have traveled</span> / <span class="verb-option">traveled</span> to Japan two years ago.
-                </div>
-                <div class="option">
-                    (E) She <span class="verb-option">lived</span> / <span class="verb-option">has lived</span> in London for five years, but now she lives in Paris.
-                </div>                
-            </div>
-        </div>
         <div class="test-paper">
             <div class="question">
                 <p>4. About the usage of the present perfect is correct to say that: </p>
