--- a/indefpronoums.html
+++ b/indefpronoums.html
@@ -68,29 +68,30 @@
                <div class="option" data-answer="B">(B) She saw any at the supermarket yesterday.</div>
                <div class="option" data-answer="C">(C) We have met somebody very interesting today.</div>
                <div class="option" data-answer="D">(D) They invited everybody last week, but anybody came.</div>
-               <div class="option" data-answer="E">(E) He has spoke with nobody about the problem.</div>
+               <div class="option" data-answer="E">(E) He didn’t talk to somebody about the problem.</div>
             </div>
         </div>
         
         <div class="test-paper">
-            <div class="question">
-                <p>4. About the usage of the present perfect is correct to say that: </p>
-            </div>
-            <div class="opt">
-                <p>I.   The present perfect is used for actions that started in the past and continue to the present, usually with SINCE and FOR</p>
-                <p>II.  The present perfect is always used when we mention a specific time, like yesterday.</p>
-                <p>III. The present perfect is only for actions that fineshed in the past with no conection to the present.</p>
-                <p>IV.  The present perfect is used to talk about life experiences without saying whn they happend.</p>
-                <p>V.   We have to use the verb in the participle</p>
-            </div>
-            <div class="options">
-                <div class="option" data-answer="A">(A) I and II are correct.</div>
-                <div class="option" data-answer="B">(B) II, III and IV are correct.</div>
-                <div class="option" data-answer="C">(C)  I, III and IV are correct.</div>
-                <div class="option" data-answer="D">(D)  I, IV and V are correct .</div>
-                <div class="option" data-answer="E">(E) All of the sentenses are correct.</div>
-            </div>
+               <div class="question">
+                 <p>4. About the usage of indefinite pronouns, it is correct to say that: </p>
+               </div>
+          <div class="opt">
+               <p>I.   "Somebody" and "someone" are usually used in affirmative sentences.</p>
+               <p>II.  "Anybody" is always used in affirmative sentences to mean the same as "somebody".</p>
+               <p>III. "Nobody" means the same as "anybody".</p>
+               <p>IV.  "Everybody" refers to all people in a group.</p>
+               <p>V.   In negative sentences, we normally use "anybody" instead of "somebody".</p>
+          </div>
+          <div class="options">
+            <div class="option" data-answer="A">(A) I and II are correct.</div>
+            <div class="option" data-answer="B">(B) II, III and IV are correct.</div>
+            <div class="option" data-answer="C">(C) I, III and IV are correct.</div>
+            <div class="option" data-answer="D">(D) I, IV and V are correct.</div>
+            <div class="option" data-answer="E">(E) All of the sentences are correct.</div>
+          </div>
         </div>
+
     <div class="test-paper">
           <div class="question">
             <img src="imagens/Captura de tela 2025-08-28 183226.png" alt="">
